support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_misplaced_elif.i
%module xxx


#elif foo == 3
int x;
#endif

